--- a/front/src/app/business/aulas/aulas.component.html
+++ b/front/src/app/business/aulas/aulas.component.html
@@ -1,51 +1,35 @@
 <div class="container mx-auto px-4 py-8">
-  <div class="flex justify-center mt-6">
-    <a href="/usuarios" class="custom-button">
-      usuarios
-    </a>
-    <a href="/facultades" class="custom-button">
-      Facultad
-    </a>
-    <a href="/carreras" class="custom-button">
-      carreras
-    </a>
-    <a href="/materias" class="custom-button">
-      materias
-    </a>
-    <a href="/aulas" class="custom-button">
-      aulas
-    </a>
+  <h1 class="text-4xl font-bold mt-8 mb-8 text-center">Lista de Aulas</h1>
+
+  <div class="overflow-x-auto">
+    <table class="min-w-full bg-white text-center">
+      <thead>
+        <tr class="bg-gray-700 text-white">
+          <th class="py-2 px-4 border-b text-center">ID</th>
+          <th class="py-2 px-4 border-b text-center">Nombre</th>
+          <th class="py-2 px-4 border-b text-center">Latitud</th>
+          <th class="py-2 px-4 border-b text-center">Longitud</th>
+          <th class="py-2 px-4 border-b text-center">Facultad</th>
+          <th class="py-2 px-4 border-b text-center">Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let aula of aulas">
+          <td class="py-2 px-4 border-b text-center">{{ aula.id }}</td>
+          <td class="py-2 px-4 border-b text-center">{{ aula.nombre }}</td>
+          <td class="py-2 px-4 border-b text-center">{{ aula.latitud }}</td>
+          <td class="py-2 px-4 border-b text-center">{{ aula.longitud }}</td>
+          <td class="py-2 px-4 border-b text-center">{{ aula.facultad.nombre }}</td>
+          <td class="py-2 px-4 border-b text-center">
+            <button (click)="editAula(aula.id)" class="bg-yellow-500 text-white px-3 py-1 rounded-md">Editar</button>
+            <button (click)="confirmDelete(aula.id)" class="bg-red-500 text-white px-3 py-1 rounded-md ml-2">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-  
-  <h1 class="text-2xl font-bold mt-6 mb-6 text-center">Lista de Aulas</h1>
 
-  <table class="min-w-full bg-white text-center">
-    <thead>
-      <tr>
-        <th class="py-2 px-4 border-b">ID</th>
-        <th class="py-2 px-4 border-b">Nombre</th>
-        <th class="py-2 px-4 border-b">Latitud</th>
-        <th class="py-2 px-4 border-b">Longitud</th>
-        <th class="py-2 px-4 border-b">Facultad</th>
-        <th class="py-2 px-4 border-b">Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let aula of aulas">
-        <td class="py-2 px-4 border-b">{{ aula.id }}</td>
-        <td class="py-2 px-4 border-b">{{ aula.nombre }}</td>
-        <td class="py-2 px-4 border-b">{{ aula.latitud }}</td>
-        <td class="py-2 px-4 border-b">{{ aula.longitud }}</td>
-        <td class="py-2 px-4 border-b">{{ aula.facultad.nombre }}</td>
-        <td class="py-2 px-4 border-b">
-          <button (click)="editAula(aula.id)" class="bg-blue-500 text-white px-3 py-1 rounded-md">Editar</button>
-          <button (click)="confirmDelete(aula.id)" class="bg-red-500 text-white px-3 py-1 rounded-md ml-2">Eliminar</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div class="flex justify-start mt-4">
+  <div class="mt-4">
     <button (click)="addAula()" class="bg-blue-950 text-white px-4 py-2 rounded-md">Añadir Aula</button>
   </div>
 </div>
