--- a/front/src/app/business/faculties/faculties.component.html
+++ b/front/src/app/business/faculties/faculties.component.html
@@ -1,44 +1,29 @@
-
 <div class="container mx-auto px-4 py-8">
-  <div class="flex justify-center mt-6">
-    <a href="/usuarios" class="custom-button">
-      usuarios
-    </a>
-    <a href="/facultades" class="custom-button">
-      Facultad
-    </a>
-    <a href="/carreras" class="custom-button">
-      carreras
-    </a>
-    <a href="/materias" class="custom-button">
-      materias
-    </a>
-    <a href="/aulas" class="custom-button">
-      aulas
-    </a>
+  <h1 class="text-4xl font-bold mt-8 mb-8 text-center">Lista de Facultades</h1>
+  <div class="overflow-x-auto">
+    <table class="min-w-full bg-slate-100 rounded-lg shadow-md">
+      <thead>
+        <tr class="bg-gray-700 text-white">
+          <th class="py-2 px-4 border-b text-center">ID</th>
+          <th class="py-2 px-4 border-b text-center">Nombre</th>
+          <th class="py-2 px-4 border-b text-center">Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let faculty of faculties">
+          <td class="py-2 px-4 border-b text-center">{{ faculty.id }}</td>
+          <td class="py-2 px-4 border-b text-center">{{ faculty.nombre }}</td>
+          <td class="py-2 px-4 border-b text-center">
+            <button (click)="editFaculty(faculty.id)" class="btn btn-warning text-white px-3 py-1 rounded-md">Editar</button>
+            <button (click)="confirmDelete(faculty.id)" class="bg-red-500 text-white px-3 py-1 rounded-md ml-2">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-  <h1 class="text-2xl font-bold mt-6 mb-6 text-center">Lista de Facultades</h1>
-  <table class="min-w-full bg-white text-center">
-    <thead>
-      <tr>
-        <th class="py-2 px-4 border-b">ID</th>
-        <th class="py-2 px-4 border-b">Nombre</th>
-        <th class="py-2 px-4 border-b">Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let faculty of faculties">
-        <td class="py-2 px-4 border-b">{{ faculty.id }}</td>
-        <td class="py-2 px-4 border-b">{{ faculty.nombre }}</td>
-        <td class="py-2 px-4 border-b">
-          <button (click)="editFaculty(faculty.id)" class="bg-blue-500 text-white px-3 py-1 rounded-md">Editar</button>
-          <button (click)="confirmDelete(faculty.id)" class="bg-red-500 text-white px-3 py-1 rounded-md ml-2">Eliminar</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
 
-  <div class="flex justify-start mt-4">
+  <!-- Centrando el botón -->
+  <div class=" mt-4">
     <button (click)="addFaculty()" class="bg-blue-950 text-white px-4 py-2 rounded-md">Añadir Facultad</button>
   </div>
 </div>
