--- a/front/src/app/business/profile/profile.component.html
+++ b/front/src/app/business/profile/profile.component.html
@@ -1,16 +1,17 @@
-<div class="container mx-auto px-4 py-8">
-  <div class="flex justify-center mt-6 space-x-4">
+<div class="container">
+  <!--  mx-auto px-4 py-8 -->
+  <!-- <div class="flex justify-center mt-6 space-x-4">
     <a href="/usuarios" class="custom-button">Usuarios</a>
     <a href="/facultades" class="custom-button">Facultad</a>
     <a href="/carreras" class="custom-button">Carreras</a>
     <a href="/materias" class="custom-button">Materias</a>
     <a href="/aulas" class="custom-button">Aulas</a>
-  </div>
-  <h1 class="text-2xl font-bold mt-6 mb-6 text-center">Lista de Usuarios</h1>
+  </div> -->
+  <h1 class="text-4xl font-bold mt-8 mb-8 text-center">Lista de Usuarios</h1>
   <div class="overflow-x-auto">
     <table class="min-w-full bg-slate-100 rounded-lg shadow-md">
       <thead>
-        <tr class="bg-teal-600 text-black-700">
+        <tr class="bg-gray-700 text-white">
           <th class="py-2 px-4 border-b text-left">ID</th>
           <th class="py-2 px-4 border-b text-left">Nombre</th>
           <th class="py-2 px-4 border-b text-left">Apellido</th>
