--- a/front/src/app/business/tables/tables.component.html
+++ b/front/src/app/business/tables/tables.component.html
@@ -1,1 +1,45 @@
-<p>tables works!</p>
+<!-- <div class="flex flex-col-reverse justify-between gap-6 md:flex-row md:items-center bg-slate-800">
+    <div class="capitalize">
+      <nav aria-label="breadcrumb" class="w-max">
+        <ol class="flex flex-wrap items-center w-full bg-opacity-60 rounded-md bg-transparent p-0 transition-all">
+          <li class="flex items-center text-blue-gray-900 antialiased font-sans text-sm font-normal leading-normal cursor-pointer transition-colors duration-300 hover:text-light-blue-500">
+            <a href="#">
+              <p class="block antialiased font-sans text-sm leading-normal text-blue-900 font-normal opacity-50 transition-all hover:text-blue-500 hover:opacity-100">dashboard</p>
+            </a>
+            <span class="text-gray-500 text-sm antialiased font-sans font-normal leading-normal mx-2 pointer-events-none select-none">/</span>
+          </li>
+          <li class="flex items-center text-blue-900 antialiased font-sans text-sm font-normal leading-normal cursor-pointer transition-colors duration-300 hover:text-blue-500">
+            <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900 font-normal">home</p>
+          </li>
+        </ol>
+      </nav>
+      <h6 class="block antialiased tracking-normal font-sans text-base font-semibold leading-relaxed text-gray-900">Sistema de Asistencia para Docentes</h6>
+    </div>
+    <div class="flex items-center gap-4">
+      <div class="mr-auto md:mr-4 md:w-56">
+        <div class="relative w-full min-w-[200px] h-10">
+          <input class="peer w-full h-full bg-transparent text-gray-700 font-sans font-normal outline outline-0 focus:outline-0 disabled:bg-blue-gray-50 disabled:border-0 transition-all placeholder-shown:border placeholder-shown:border-blue-gray-200 placeholder-shown:border-t-blue-gray-200 border focus:border-2 border-t-transparent focus:border-t-transparent text-sm px-3 py-2.5 rounded-[7px] border-blue-gray-200 focus:border-blue-500" placeholder=" ">
+          <label class="flex w-full h-full select-none pointer-events-none absolute left-0 font-normal peer-placeholder-shown:text-gray-500 leading-tight peer-focus:leading-tight peer-disabled:text-transparent peer-disabled:peer-placeholder-shown:text-blue-gray-500 transition-all -top-1.5 peer-placeholder-shown:text-sm text-[11px] peer-focus:text-[11px] before:content[' '] before:block before:box-border before:w-2.5 before:h-1.5 before:mt-[6.5px] before:mr-1 peer-placeholder-shown:before:border-transparent before:rounded-tl-md before:border-t peer-focus:before:border-t-2 before:border-l peer-focus:before:border-l-2 before:pointer-events-none before:transition-all peer-disabled:before:border-transparent after:content[' '] after:block after:flex-grow after:box-border after:w-2.5 after:h-1.5 after:mt-[6.5px] after:ml-1 peer-placeholder-shown:after:border-transparent after:rounded-tr-md after:border-t peer-focus:after:border-t-2 after:border-r peer-focus:after:border-r-2 after:pointer-events-none after:transition-all peer-disabled:after:border-transparent peer-placeholder-shown:leading-[3.75] text-blue-gray-400 peer-focus:text-blue-500 before:border-blue-gray-200 peer-focus:before:border-blue-500 after:border-blue-gray-200 peer-focus:after:border-blue-500">Type here</label>
+        </div>
+      </div>
+      <ng-container *ngIf="isAuthenticated; else loggedOut">
+        <span class="text-white-700 mr-4">Bienvenido, {{ userName }}</span>
+        <button (click)="logout()" class="middle none font-sans font-medium text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 rounded-lg text-gray-500 hover:bg-blue-gray-500/10 active:bg-blue-gray-500/30 flex items-center gap-1 px-4" type="button">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" class="h-5 w-5 text-blue-gray-500">
+            <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v7h4a1 1 0 110 2h-4v7a1 1 0 11-2 0v-7H6a1 1 0 110-2h4V4a1 1 0 011-1z" clip-rule="evenodd"></path>
+          </svg>
+          Cerrar Sesión
+        </button>
+      </ng-container>
+      <ng-template #loggedOut>
+        <a href="/login">
+          <button class="middle none font-sans font-bold center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 rounded-lg text-gray-500 hover:bg-blue-gray-500/10 active:bg-blue-gray-500/30 flex items-center gap-1 px-4" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" class="h-5 w-5 text-blue-gray-500">
+              <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v7h4a1 1 0 110 2h-4v7a1 1 0 11-2 0v-7H6a1 1 0 110-2h4V4a1 1 0 011-1z" clip-rule="evenodd"></path>
+            </svg>Sign In
+          </button>
+        </a>
+      </ng-template>
+    </div>
+  </div>
+ -->
